--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -188,6 +188,9 @@
 
     "FinalStarshipDetails.name.instruction": "Every Starship needs a name. There is no universal convention for the naming of ships, often naming them after locations, important historical persons (normally only the person’s surname), ancient ships, mythical figures, or even more abstract ideals, virtues, or concepts. In many cases, these vague naming conventions overlap — a ship may be named after an ancient ship that was itself named after a location, for example — but this shouldn’t cause any issues.\n\nThe name should ideally be a single word or, more rarely, two.",
 
+    "FinalStarshipDetails.traits.instruction": "You may now define additional Traits for your starship. Your starship already has these traits:",
+    "FinalStarshipDetails.traits.note": "Your GM may allow you to pick additional traits that describe your vessel. Examples include: Prototype, Legacy Vessel, Renowned and Long-Serving.",
+
     "MilestonePage.instruction": "Select what type of modification you want to apply for this milestone.",
 
     "MissionPodSelectionPage.text": "Certain spaceframes have the ability to be fitted with a single mission pod, chosen from the list below. The talents provided by the pod may not be swapped out normally, but the entire mission pod (and all its benefits) may be swapped out as if it were a single talent.",
