minor translation-related revisions

--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -18,6 +18,8 @@
     "Home.talentsButton": "Talents Overview",
     "Home.tokenCreator": "Tokens",
 
+    "History.noHistory": "No history",
+
     "NpcConfigurationPage.option.anyMajorSpecies": "Any Major Species",
     "NpcConfigurationPage.option.anySpecialization": "Any Specialization",
 
