Add a starship profile widget; a few more translation things

--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -411,6 +411,7 @@
     "Construct.other.purpose": "Purpose",
     "Construct.other.rank": "Rank",
     "Construct.other.refits": "Refits",
+    "Construct.other.registry": "Registry",
     "Construct.other.resistance": "Resistance",
     "Construct.other.reprimands": "Reprimands",
     "Construct.other.reputation": "Reputation",
