--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -379,6 +379,7 @@ Construct.other.power,Power,Energie,Poder,Energie,
 Construct.other.purpose,Purpose,Zweck,,Rôle,
 Construct.other.rank,Rank,Rang,Rango,Grade,
 Construct.other.refits,Refits,Nachrüstungen,Refits,Mises à jour,
+Construct.other.registry,Registry,,,,
 Construct.other.resistance,Resistance,Widerstand,Resistencia,Résistance,
 Construct.other.reprimands,Reprimands,Verwarnungen,,Réprimandes,
 Construct.other.reputation,Reputation,Ansehen,,Réputation,
