--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -167,6 +167,7 @@ FinalStarshipDetails.name.instruction,"Every Starship needs a name. There is no 
 The name should ideally be a single word or, more rarely, two.",,,,
 FinalStarshipDetails.traits.instruction,You may now define additional Traits for your starship. Your starship already has these traits:,,,,
 FinalStarshipDetails.traits.note,"Your GM may allow you to pick additional traits that describe your vessel. Examples include: Prototype, Legacy Vessel, Renowned and Long-Serving.",,,,
+FinishPage.job.example,e.g. Junior Engineer,,,,
 MilestonePage.instruction,Select what type of modification you want to apply for this milestone.,"Wählen Sie die gewünschte Änderung, die Sie mit diesem Meilenstein vornehmen möchten",,Selectionnez le type de modification vous voulez appliquer avec ce Jalon,
 MissionPodSelectionPage.text,"Certain spaceframes have the ability to be fitted with a single mission pod, chosen from the list below. The talents provided by the pod may not be swapped out normally, but the entire mission pod (and all its benefits) may be swapped out as if it were a single talent.","Bestimmte Schiffsklassen sind mit einem einzelnen Missionsmodul ausgestattet, das aus der Liste unten ausgewählt wird. Die durch das Modul zur Verfügung gestellten Talente können nicht auf die übliche Art und Weise ausgetauscht werden. Allerdings ist es möglich, das gesamte Missionsmodul (und damit alle seine Boni) auszutauschen.",,"Certains modèles ont la possibilité d'être équipés d'un seul module de mission, choisi dans la liste ci-dessous. Les talents fournis par le module ne peuvent pas être échangés normalement, mais l'ensemble du module de mission (et tous ses avantages) peut être échangé comme s'il s'agissait d'un seul talent.",
 MissionPodSelectionPage.errorNoSelection,Please select a mission pod before proceeding.,Bitte wählen Sie ein Missionmodul um fortzufahren.,,Sélectionnez un module de mission avant de continuer SVP,
@@ -348,6 +349,7 @@ Common.text.suggestions,Suggestions,Vorschläge,,,
 Common.text.total,Total,Insgesamt,,Total,
 Common.text.yes,Yes,Ja,,,
 Common.text.no,No,Nein,,,
+Common.text.other,Other,,,,
 Common.select.choose,Choose...,Wählen Sie aus ...,,Choisir,
 Construct.other.assignment,Assignment,Position,Asignación,Mission,
 Construct.other.attribute,Attribute,Attribut,,Attribut,
