--- a/WebTools/src/i18n/locales/ru/translations.json
+++ b/WebTools/src/i18n/locales/ru/translations.json
@@ -9,7 +9,7 @@
     "Lcars.news": "Новости",
     "Lcars.profile": "Профиль",
 
-    "EraSelectionPage.eraInstruction": "Выберите в какой Эре вы планируете играть. Спросите Г-ма какую Эру выбрать.",
+    "EraSelectionPage.eraInstruction": "Выберите в какой Эре вы планируете играть. Спросите Мастера какую Эру выбрать.",
 
     "Home.title": "Генератор Персонажей STA",
     "Home.selection": "Выберите инстумент.",
@@ -17,11 +17,13 @@
     "Home.talentsButton": "Обзор Талантов",
     "Home.tokenCreator": "Токены",
 
+    "Lcars.noHistory": "История пуста",
+
     "NpcConfigurationPage.npcType": "Тип ВП",
     "NpcConfigurationPage.specialization": "Специализация",
     "NpcConfigurationPage.text": "Определите тип ВП которого вы пытаетесь создать.",
 
-    "SourceSelectionPage.sourceInstruction": "Выберите источники. Уточните с ГМ-ом если возможно.",
+    "SourceSelectionPage.sourceInstruction": "Выберите источники. Уточните с Мастером если возможно.",
     "SourceSelectionPage.gameTypeInstruction": "В какой вид игры вы играете?",
     "SourceSelectionPage.sourceNote": "Некоторые источники еще на доступны; скоро добавим!",
     "SourceSelectionPage.standardGameType": "Стандартные правила НРИ",
@@ -112,7 +114,7 @@
     "EducationPage.starfleet.academy": "Офицерская Академия",
     "EducationPage.starfleet.other": "Другое",
 
-    "EnvironmentPage.showAlt": "Позволить альтернативную Среду обитания (Решение ГМ-а)",
+    "EnvironmentPage.showAlt": "Позволить альтернативную Среду обитания (Решение Мастера)",
 
     "EnvironmentPage.button.selectEnvironment": "Выберите Среду обитания",
     "EnvironmentPage.button.rollEnvironment": "Рандомная Среда обитания",
@@ -161,6 +163,113 @@
 
     "SpaceframeOptionPage.button.standardSpaceframe": "Стандартная рамка",
     "SpaceframeOptionPage.button.customSpaceframe": "Нестандартная рамка",
+
+    "SpeciesDetails.selectThree": "(выберите три)",
+    "SpeciesDetails.allowCrossSpecies": "Позволить таланты других рас (Решение Мастера)",
+    "SpeciesDetails.allowEsoteric": "Позволить эзотерические таланты (Решение Мастера)",
+
+    "SpeciesPage.selectSpecies": "Выбрать расу",
+    "SpeciesPage.selectMixedSpecies": "Выбрать смешанную расу",
+    "SpeciesPage.rollCoreSpecies": "Случайный выбор Базовой расы",
+    "SpeciesPage.rollAlphaSpecies": "Случайный выбор Альфа расы",
+    "SpeciesPage.rollBetaSpecies": "Случайный выбор Бета расы",
+    "SpeciesPage.rollGammaSpecies": "Случайный выбор Гамма расы",
+    "SpeciesPage.rollDeltaSpecies": "Случайный выбор Дельта расы",
+    "SpeciesPage.text": "К какой расе Вы относитесь? Вы также можете создать персонажа смешанной расы, получая выгоду от обеих.",
+
+    "SpeciesPage.text.select": "Выберите и рандомизируйте свою расу.",
+
+    "SpeciesPage.textNoRoll": "К какой расе Вы относитесь? Вы также можете создать персонажа смешанной расы, получая выгоду от обеих.",
+    "SpeciesPage.mixedSpeciesNote": "Выберите две расы. Вы получите Черты обеих и сможете выбирать Таланты с обеих сторон. Но только первичная раса даёт бонусы к Качествам.",
+
+    "ToolSelection.instruction": "Что вы хотите сгенерировать?",
+    "ToolSelection.mainCharacter": "Главный персонаж",
+    "ToolSelection.supportingCharacter": "Персонаж поддержки",
+    "ToolSelection.starship": "Звездолет",
+    "ToolSelection.spaceSector": "Звездный сектор",
+    "ToolSelection.randomNpc": "Рандомальный второстепенный персонаж",
+
+    "Common.button.random": "Случайный выбор",
+    "Common.button.select": "Выбрать",
+    "Common.button.selectAll": "Выбрать все",
+    "Common.button.selectNone": "Отменить все",
+    "Common.button.showAll": "Показать все",
+    "Common.button.copyToClipboard": "Скопировать в буфер",
+    "Common.button.add": "Добавить",
+    "Common.button.cancel": "Отменить",
+    "Common.button.create": "Создать",
+    "Common.button.modify": "Изменить",
+    "Common.button.next": "Слуедующий",
+    "Common.button.view": "Показать",
+
+    "Common.text.description": "Описание",
+    "Common.text.none": "Пусто",
+    "Common.text.copiedToClipboard": "Скопировано в буфер",
+    "Common.text.search": "Поиск ...",
+    "Common.text.select": "Выбрать",
+    "Common.text.selectOne": "Выберите один",
+    "Common.text.suggestions": "Предложения",
+    "Common.text.total": "Всего",
+    "Common.text.yes": "Да",
+    "Common.text.no": "Нет",
+    "Common.text.other": "Другое",
+
+    "Common.select.choose": "Выберите ...",
+
+    "Construct.other.assignment": "Назначение",
+    "Construct.other.career": "Карьера",
+    "Construct.other.careerEvent1": "Первое событие карьеры",
+    "Construct.other.careerEvent2": "Второе событие карьеры",
+    "Construct.other.careerEvents": "События карьеры",
+    "Construct.other.characterType": "Тип персонажа",
+    "Construct.other.crew": "Персонал",
+    "Construct.other.departments": "Отделы",
+    "Construct.other.determination": "Целеустремленность",
+    "Construct.other.environment": "Среда обитания",
+    "Construct.other.equipment": "Снаряжение",
+    "Construct.other.era": "Эра",
+    "Construct.other.focus": "Специализация",
+    "Construct.other.focus1": "Специализация 1",
+    "Construct.other.focus2": "Специализация 2",
+    "Construct.other.focus3": "Специализация 3",
+    "Construct.other.focuses": "Специализации",
+    "Construct.other.job": "Работа",
+    "Construct.other.name": "Имя",
+
+    "Page.title.attributesAndDisciplines": "Заключительные штрихи",
+    "Page.title.careerEvent": "События карьеры",
+    "Page.title.careerLength": "Продолжительность карьеры",
+    "Page.title.careerLengthDetails": "Подробности продолжительности карьеры",
+    "Page.title.characterType": "Тип персонажа",
+    "Page.title.education": "Обучение",
+    "Page.title.educationDetails": "Детали обучения",
+    "Page.title.environment": "Среда обитания",
+    "Page.title.environmentDetails": "Подробности среды обитания",
+    "Page.title.era": "Эра",
+    "Page.title.extraTalentDetails": "Дополнительные детали",
+    "Page.title.finish": "Заключительные штрихи",
+    "Page.title.home": "Домашняя",
+    "Page.title.soloConstructType": "Выбор инструмента",
+    "Page.title.sourceSelection": "Источники",
+    "Page.title.toolSelection": "Выбор инструмента",
+
+    "Era.name.enterprise": "Энтерпрайз (22й век)",
+    "Era.name.originalSeries": "Оригинальные серии (23й век)",
+    "Era.name.nextGeneration": "Новое поколение (24й век)",
+    "Era.name.picardProdigy": "Пикард/Вундеркинды (Поздний 24й и начало 25го века)",
+    "Era.name.discovery32": "Дискавери (32й век)",
+
+    "ExtraType.none": "Отсуствует",
+
+    "Source.type.coreBook": "Базовые книги правил",
+    "Source.type.unofficial": "Неофициальные ресурсы",
+
+    "Source.book.core": "Основная книга",
+    "Source.book.alphaQuadrant": "Альфа Квадрант",
+    "Source.book.betaQuadrant": "Бета Квадрант",
+    "Source.book.gammaQuadrant": "Гамма Квадрант",
+    "Source.book.deltaQuadrant": "Дельта Квадрант",
+    "Source.book.voyager": "Вояджер",
 
     "Species.aenar.name": "Аэнар",
 
